--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -20,7 +20,7 @@
     <string name="error_list_update">Radyo tarayıcı sunucusuna bağlanamadı</string>
 
     <string name="nav_item_stations">İstasyonlar</string>
-    <string name="nav_item_starred">İş</string>
+    <string name="nav_item_starred">İşaretli</string>
     <string name="nav_item_history">Geçmiş</string>
     <string name="nav_item_settings">Ayarlar</string>
     <string name="nav_item_alarm">Alarm</string>
